# RecastCSharp

./: .gitignore
Compiler/RecastAndroidPro/app/: build.gradle
Compiler/RecastAndroidPro/app/src/androidTest/java/com/example/recastandroidpro/: ExampleInstrumentedTest.java
Compiler/RecastAndroidPro/app/src/main/: AndroidManifest.xml
Compiler/RecastAndroidPro/app/src/main/cpp/: CMakeLists.txt  ChunkyTriMesh.cpp  ConvexPolygon.cpp  ConvexPolygon.h  InputGeom.cpp  MeshLoaderObj.cpp  PathFinder.cpp  PerfTimer.cpp  RecastBase.cpp  RecastBase.h  RecastDll.cpp  RecastInterfaces.cpp  RecastInterfaces.h  SoloRecast.cpp  TileCacheRecast.cpp  TileRecast.h  stdafx.h
Compiler/RecastAndroidPro/app/src/main/java/com/example/recastandroidpro/: MainActivity.java
Compiler/RecastAndroidPro/app/src/main/res/values/: strings.xml
Compiler/RecastAndroidPro/app/src/test/java/com/example/recastandroidpro/: ExampleUnitTest.java
Compiler/RecastAndroidPro/gradle/wrapper/: gradle-wrapper.properties
RecastDll/: RecastDll.sln
RecastDll/RecastDll/: InputGeom.h  MeshLoaderObj.h  PathFinder.h  RecastDll.cpp  RecastDll.vcxproj  RecastDll.vcxproj.filters  SoloRecast.h  TileCacheRecast.h  TileRecast.cpp  stdafx.h
RecastDll/Test/: Test.cpp  Test.vcxproj
Unity/: .gset  Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  Unity.Editor.csproj  Unity.csproj
Unity/Assets/Material/: Ground.mat
Unity/Assets/Prefabs/: dungeon.prefab
Unity/Assets/Scenes/: SampleScene.unity  UnityOriginalNav.unity
Unity/Assets/Scenes/SampleScene/: NavMesh.asset
Unity/Assets/Scenes/UnityOriginalNav/: NavMesh.asset
Unity/Assets/Scripts/: Main.cs  NavController.cs  NavOriginalController.cs
Unity/Assets/Scripts/Editor/Navigation/: ConvexVolume.cs  Geometry.cs  NavMeshEditor.Convex.cs  NavMeshEditor.Toolkit.cs  NavMeshEditor.cs
Unity/Assets/Scripts/Engine/: BoxTileObstacle.cs  CylinderTileObstacle.cs  ExtendFloat.cs  ExtendVector.cs  NavMeshAgent.cs  RecastNavMesh.cs
Unity/Assets/Scripts/Navigation/: BuildSettings.cs  ConvexVolumeData.cs  RecastBase.cs  RecastDll.cs  SoloRecast.cs  TileCacheRecast.cs  TileRecast.cs
Unity/Assets/StreamingAssets/: SampleScene.gset
Unity/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
android16/: Makefile.Shared.mk
